2008-01-01  Ross Burton  <ross@burtonini.com>

	* configure.in:
	* NEWS:
	Version 2.21.1.

2007-12-31  Jonh Wendell  <jwendell@gnome.org>

	* src/sj-genres.[ch]:
	* src/Makefile.am:
	Add sj-genre, to handle the genre entry, by saving custom genres.
	Closes #382677.

	* src/sj-main.c:
	Call setup_genre_entry() to setup the genre entry.

	* src/sj-extracting.c:
	Call save_genre() to save the custom genre when extracting.

2007-12-28  Ross Burton  <ross@burtonini.com>

	* data/sound-juicer.glade:
	Set the size of the progress bar to look better (#460650, thanks
	Stefan Oderbolz)

2007-12-24  Ross Burton  <ross@burtonini.com>

	* src/sj-extracting.c:
	Detect the target file system and if its VFAT or NTFS, strip
	characters which it can't handle.  Thanks to Carl-Anton Ingmarsson
	and GHOP (#321436).

2007-12-23  Ross Burton  <ross@burtonini.com>

	* configure.in:
	* src/sj-inhibit.[ch]:
	* src/Makefile.am:
	Add sj-inhibit, to (un)inhibit automatic suspension by
	gnome-power-manager.

	* src/sj-extracting.c:
	Call sj-inhibit when extracting.

	Closes #344947, thanks Carl-Anton Ingmarsson and GHOP.

2007-12-22  Ross Burton  <ross@burtonini.com>

	* src/sj-extracting.c:
	When finished, unset the current iterator.  This should fix the
	crasher! (#498500).

2007-12-22  Ross Burton  <ross@burtonini.com>

	* data/sound-juicer.schemas.in:
	Add "open folder when finished" schema.

	* data/sound-juicer.glade:
	Add "open folder when finished" check box.

	* src/sj-prefs.c:
	Hook up GConf option to the check box.
	
	* src/sj-main.c:
	* src/sound-juicer.h:
	Add global boolean open_finished, and hook it up to GConf.

	* src/sj-extracting.c:
	Don't show a dialog when the rip is finished, instead just eject
	or open the target folder.

	Closes #504639.  Merry Christmas Luis. :)

2007-12-22  Ross Burton  <ross@burtonini.com>

	* src/sj-main.[ch]:
	* src/sj-prefs.c:
	Make the gconf callbacks static, and fix some cast/type-punned warnings.

2007-12-21  Ross Burton  <ross@burtonini.com>
