@@ -1,3 +1,9 @@
+2008-01-02  Ross Burton  <ross@burtonini.com>
+
+	* src/sj-main.c:
+	When changing album artist, only change track artists if they
+	haven't been already changed (#122367, thanks Bill O'Shea).
+
 2008-01-01  Ross Burton  <ross@burtonini.com>
 
 	* configure.in:
